<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/nav_login_screen"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Acceso"
                android:textAlignment="center"
                android:textColor="@color/colorapp"
                android:textSize="36sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginText_Welcome"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/gris"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_correo"
                android:drawablePadding="8dp"
                android:hint="Correo"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorapp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/loginText"
                android:textSize="15sp"
                android:textAlignment="center"
                android:id="@+id/signupText"
                android:textColor="@color/letra"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>